--- a/config/database.yml
+++ b/config/database.yml
@@ -84,6 +84,4 @@ test:
 #
 production:
   <<: *default
-  database: notifier_production
-  username: notifier
-  password: <%= ENV['NOTIFIER_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
